# duneprototypes

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
duneprototypes/BeamData/: CMakeLists.txt
duneprototypes/BeamData/ProtoDUNEBeamSpill/: CMakeLists.txt
duneprototypes/Coldbox/hd/: CMakeLists.txt  HDColdboxDAQWriter_module.cc  HDColdboxDataInterface.h  HDColdboxDataInterfaceWIB3_tool.cc  HDColdboxDataInterface_tool.cc
duneprototypes/Coldbox/hd/ChannelMap/: CMakeLists.txt  HDColdboxChannelMapService.fcl  PD2HDChannelMapSP.h  PD2HDChannelMapService.h  PD2HDChannelMapService_service.cc  PD2HDChannelMap_v1.txt  README.txt
duneprototypes/Coldbox/hd/fcl/: CMakeLists.txt  HDColdboxDAQWriter.fcl  channelstatus_hdcb.fcl  hdcoldbox_dataprep.fcl  hdcoldbox_hdf5daqwrite.fcl  hdcoldbox_raw_dataprep.fcl  hdcoldboxdatainterface_tool.fcl  hdcoldboxwib3_raw_dataprep.fcl  hdcoldboxwib3_raw_dataprep_chanmap0.fcl  hdcoldboxwib3_raw_dataprep_chanmap1.fcl  hdcoldboxwib3_raw_dataprep_chanmap2.fcl  pdhd_tools.fcl
duneprototypes/Coldbox/vd/: CMakeLists.txt  VDColdboxDataInterface.h  VDColdboxDataInterface_tool.cc  VDColdboxPDSDecoder_module.cc  VDColdboxTDERawInput.h  VDColdboxTDERawInput_source.cc  vdcoldbox_raw_dataprep.fcl
duneprototypes/Coldbox/vd/ChannelMap/: CMakeLists.txt  README  VDColdboxChannelMapService.fcl  VDColdboxChannelMapService_service.cc  VDColdboxTDEChannelMapService.fcl  VDColdboxTDEChannelMapService.h  VDColdboxTDEChannelMapService_service.cc  kel_chan_map.h  tde_cmap_utils.h  vdcbce_chanmap_v1_dcchan3200.txt  vdcbce_chanmap_v1_dcchan3200_verticalslice.txt  vdcbce_chanmap_v2.txt  vdcbce_chanmap_v2_dcchan3200.txt
duneprototypes/Coldbox/vd/Tools/: CMakeLists.txt  CrpChannelGroups.h  CrpChannelGroups_tool.cc  CrpChannelHelper.h  CrpChannelRanges.h  CrpChannelRanges_tool.cc  VDColdboxChannelGroups.h  VDColdboxChannelGroups.h~HEAD  VDColdboxChannelGroups_tool.cc  VDColdboxChannelRanges.h  VDColdboxChannelRanges_tool.cc  VDColdboxOnlineChannel.h  VDColdboxOnlineChannel_tool.cc  vdcoldbox_tools.fcl
duneprototypes/Coldbox/vd/fcl/: CMakeLists.txt  README.md  SSPDecoder.fcl  channelstatus_vdcb.fcl  channelstatus_vdcrp1t.fcl  channelstatus_vdcrp2.fcl  channelstatus_vdcrp3.fcl  channelstatus_vdcrp4.fcl  channelstatus_vdcrp5.fcl  channelstatus_vdct.fcl  evd_vdcb_bde.fcl  evd_vdcb_tde.fcl  hdf5_ssp_decoder.fcl  hdf5_ssp_raw_decoder.fcl  runvdcoldboxdecodercrp45.fcl  services_vdcoldbox.fcl  vdcoldbox_dataprep.fcl  vdcoldbox_raw_dataprep.fcl  vdcoldbox_raw_dataprep_crp2.fcl  vdcoldbox_raw_dataprep_reco.fcl  vdcoldbox_raw_dataprep_reco_crp45.fcl  vdcoldbox_raw_tdedataprep.fcl  vdcoldbox_raw_tdedataprep_reco.fcl  vdcoldbox_tdedecoder.fcl  vdcoldboxrawinput_job.fcl  vdct_decoder.fcl  vdct_reco_tools.fcl
duneprototypes/Protodune/dualphase/: AnaRootParser_module.cc  CMakeLists.txt  CRTGen_module.cc  Purity_module.cc
duneprototypes/Protodune/dualphase/Light/: CMakeLists.txt  DualPhaseOpHitDumper_module.cc
duneprototypes/Protodune/dualphase/RawDecoding/: CMakeLists.txt  PDDPRawInputDriver_service.cc  PDDPRawInput_source.cc  PDDPTPCRawDecoderTest_module.cc
duneprototypes/Protodune/dualphase/fcl/: channelstatus_pddp.fcl  pddp_data_reco_2022.fcl
duneprototypes/Protodune/dualphase/test/: CMakeLists.txt
duneprototypes/Protodune/hd/RawDecoding/: CMakeLists.txt  DAPHNEInterface1_tool.cc  DAPHNEInterface2_tool.cc  DAPHNEInterfaceBase.h  DAPHNEReaderPDHD.fcl  DAPHNEReaderPDHD_module.cc  DAPHNEUtils.cxx  DAPHNEUtils.h  PDHDDataInterface.h  PDHDDataInterfaceWIB3Tool.fcl  PDHDDataInterfaceWIB3_tool.cc  PDHDDataInterfaceWIBEth.fcl  PDHDDataInterfaceWIBEth3.fcl  PDHDDataInterfaceWIBEth3_tool.cc  PDHDDataInterfaceWIBEth_tool.cc  PDHDFEMBFilter.fcl  PDHDFEMBFilter_module.cc  PDHDReadoutUtils.cxx  PDHDReadoutUtils.h  PDHDTPCReader.fcl  PDHDTPCReader_module.cc  PDHDTimingRawDecoder.fcl  PDHDTimingRawDecoder_module.cc  PDHDTriggerReader.fcl  PDHDTriggerReader3.fcl  PDHDTriggerReader3_module.cc  PDHDTriggerReader_module.cc  pdhd_daphne2_decoder.fcl  pdhd_daphne_decoder_job.fcl  pdhdtriggerdecoder.fcl  pdhdtriggerdecoder3.fcl  run_pdhd_timing_decoder.fcl  run_pdhd_tpc_decoder.fcl  run_pdhd_tpstream3_decoder.fcl  run_pdhd_trigger_timing.fcl  run_pdhd_wibeth3_tpc_decoder.fcl  run_pdhd_wibeth_tpc_decoder.fcl  runpdhdtpstreamdecoder.fcl  runpdhdwibethtpcdecoder.fcl  vdcb_daphne_decoder_job.fcl
duneprototypes/Protodune/hd/Tool/: CMakeLists.txt  PdhdChannelGroups.h  PdhdChannelGroups_tool.cc  PdhdChannelRanges.h  PdhdChannelRanges_tool.cc
duneprototypes/Protodune/singlephase/: CMakeLists.txt
duneprototypes/Protodune/singlephase/BeamReco/: BeamEvent_module.cc  CMakeLists.txt
duneprototypes/Protodune/singlephase/CRT/: CMakeLists.txt  CRTOnlineMonitor_module.cc  CRTSimRefac_module.cc  CRTSimValidation_module.cc  CRTSim_module.cc  CRTTimingValidation_module.cc  HelloAuxDet_module.cc  SingleCRTMatchingProducer_module.cc  SingleCRTMatching_module.cc  TimeOffset_module.cc  TwoCRTMatchingProducer_module.cc  TwoCRTMatching_module.cc  TwoCRTReco_module.cc
duneprototypes/Protodune/singlephase/DataUtils/: CMakeLists.txt  ProtoDUNEDataUtils.cxx  ProtoDUNEFembFilter_module.cc  ProtoDUNETriggerFilter_module.cc  ProtoDUNEUnstableHVFilter.fcl  ProtoDUNEUnstableHVFilter_module.cc
duneprototypes/Protodune/singlephase/Exe/: CMakeLists.txt  pdChannelRange.cxx
duneprototypes/Protodune/singlephase/NearlineMonitor/: CMakeLists.txt  PDSPHitMonitor_module.cc  PlotEventDetails_module.cc  PlotOpticalDetails_module.cc  SSPMonitor_module.cc  TpcMonitor_module.cc  rawtpcmonitor.fcl
duneprototypes/Protodune/singlephase/PhotonDetectors/: CMakeLists.txt
duneprototypes/Protodune/singlephase/RawDecoding/: CMakeLists.txt  CRTRawDecoder_module.cc  FelixIntegrityTest_module.cc  FelixRawDecoder_module.cc  PDSPCTBRawDecoder_module.cc  PDSPTPCDataInterface.h  PDSPTPCDataInterface_tool.cc  PDSPTPCRawDecoder_module.cc  RceRawDecoder_module.cc  SSPRawDecoder_module.cc  TimingRawDecoder_module.cc
duneprototypes/Protodune/singlephase/T0Reco/: CMakeLists.txt  T0RecoAnodePiercers_module.cc  T0RecoSCECalibrations_module.cc
(+198 files in other folders)
