
install_headers()
install_fhicl()
install_source()
install_scripts()
add_subdirectory(Utility)
add_subdirectory(Exe)
add_subdirectory(NearlineMonitor)
add_subdirectory(RawDecoding)
add_subdirectory(CRT)
add_subdirectory(CTB)
add_subdirectory(Tool)
add_subdirectory(fcl)
add_subdirectory(DetectorServices)
add_subdirectory(BeamReco)
add_subdirectory(T0Reco)
add_subdirectory(dEdxcalibration)
add_subdirectory(DataUtils)

